Fix code block overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -162,3 +162,8 @@ table {
     background-color: #fff;
   }
 }
+
+figure {
+  margin: 0;
+  overflow-x: scroll;
+}
